--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,49 +15,61 @@
 </head>
 
   <body>
+    
+      <nav>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+        <a href="#">Services</a>
+        <a href="#"></a>Product</a>
+        <a href="#">Vision</a>>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      
 
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  <div class="class1">
   Innovation
   On
   Demand
+  </div>
 
   Get Started
 
   <img src="img/header-img.png" alt="Image of a code snippet.">
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <div class="div1">
+  <h3>Features</h3>
+  <span>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</span>
 
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
+  <h3>About</h3>
+  <span>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</span>
+    </div>
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  <div class="div2">
+  <h3>Services</h3>
+  <div class="class4">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</div>
+
+
+  <h3>Product</h3>
+  <div class="class5">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</div>
+
+  <h3>Vision</h3>
+  <div calss="class6">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</div>
+    </div>
   
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Contact
-  123 Way 456 Street
+   <div class="div3"> 
+    <h3>Contact</h3>
+  <div class="7">123 Way 456 Street
   Somewhere, USA
   1 (888) 888-8888
-  sales@greatidea.io
+  sales@greatidea.io</div>
+  </div>
 
-  Copyright Great Idea! 2018
+  <div class="class8">Copyright Great Idea! 2018</div>
+  
   
   </body>
 </html>
+.
